{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "PlayerActs",
            "id": "88a6c140-4e7b-48c3-9445-8292a021e93e",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "c7aefc61-513a-473f-8e86-579d72e0d5e3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Command",
                    "type": "Button",
                    "id": "20527fb6-4933-41a6-b51b-b8e6f89ddf8e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ModifierShift",
                    "type": "Button",
                    "id": "e26ed319-3b2b-4048-9e7d-84aba6e2b1bf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ModifierControl",
                    "type": "Button",
                    "id": "08638ea7-5ed4-41c2-8b9c-5a360ebb3948",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "2de3dd1d-df42-4ef1-b75a-ef31d9411cc7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "NumberKey1",
                    "type": "Button",
                    "id": "b9fcb022-3b48-4f0a-837e-e4083178c79c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey2",
                    "type": "Button",
                    "id": "cdf240a8-6f74-4244-aaf5-46fbc5fa9ad1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey3",
                    "type": "Button",
                    "id": "57abb3e6-3dc0-432a-a8c9-60008390ac71",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey4",
                    "type": "Button",
                    "id": "508e1d77-6161-47de-b0eb-c2e1ca305d1b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey5",
                    "type": "Button",
                    "id": "ac84aaa1-09f6-4a57-8312-b6383e7c8e0a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey6",
                    "type": "Button",
                    "id": "0ee5416f-a9b3-43db-8c23-6a51417af891",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey7",
                    "type": "Button",
                    "id": "2df42c3c-33ab-4956-9f7a-c2ef6ce787d7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey8",
                    "type": "Button",
                    "id": "0c43d059-545a-42fd-b148-46dca331f19e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NumberKey9",
                    "type": "Button",
                    "id": "5fbec25e-c685-4ba0-aebb-aa3adf153c51",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraMove",
                    "type": "Value",
                    "id": "3473c88e-ea89-431e-b110-e0d692dd5e4a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraRotateToggle",
                    "type": "Value",
                    "id": "21a8a398-329e-49e3-ae88-127566977631",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ToggleOverviewZoom",
                    "type": "Button",
                    "id": "681524e9-4b8c-47b3-a6c2-7a05c4ce9d29",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CenterOnSelection",
                    "type": "Button",
                    "id": "9f91debc-157c-4a30-b160-49d81f131a9f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleFollowSelection",
                    "type": "Button",
                    "id": "3337d44d-4b1e-4146-a0dc-5712412b2460",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GoHome",
                    "type": "Button",
                    "id": "b2312b98-e82f-4b84-ba20-21fda0880322",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraZoomScroll",
                    "type": "Value",
                    "id": "62a38dad-6e55-4537-9a29-131faf9b1ba8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Spawn",
                    "type": "Button",
                    "id": "8ffbc9e6-54b0-43f9-9230-8c2b82876a66",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Despawn",
                    "type": "Button",
                    "id": "ecb7f272-f7f9-4faa-a2c3-527d50df9ee2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "34bfbd39-31cb-498d-bdd6-d6cd6772a724",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9de59ce-c67d-498e-95a1-88702eb00ccf",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Command",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf547a5f-20c4-4f52-9f31-5a78cc3bada4",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ModifierShift",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e5eb7b3-5a79-4374-a790-d39aae89c56c",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ModifierControl",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "1fe94158-eceb-43fe-b2a0-f1bc94a26f48",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "9b5c15c9-3012-490e-a1ab-0f2a9ef4238d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "67b6c7df-3a57-4551-8947-ee2632ad1cb0",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "One Modifier",
                    "id": "bb1519c5-3dc4-4dfa-8752-5af9da5ee593",
                    "path": "OneModifier",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotateToggle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "8409e941-71ed-416c-ad3f-7c0417521ca3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotateToggle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "8d1c78bb-1b3b-4db0-9fb5-7156ea3655da",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotateToggle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c768fe33-ac89-45d7-b888-a026b182d29a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberKey1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7cda5a3-74d2-4855-b4a1-dd13bad32844",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberKey2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9ac0854a-d7a0-4d34-b180-f1b5eb9c8400",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberKey3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba42bd9b-d37b-4a0d-ba89-dc1bbfda810c",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberKey4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90614d08-ad41-485c-a3e5-f5d3fada4acc",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberKey5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "caa3407a-b542-4279-beab-3789c68b605d",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberKey6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b4df37c-12fa-457f-9b03-f05b0b80710b",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberKey7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f253d78-0f19-4a2b-8345-2fc3596b2746",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberKey8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06c5cf76-77de-4377-8a7a-412063d1f04d",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NumberKey9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ccfc8b0-43a8-44c8-a4fd-329d83d007ea",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleOverviewZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13b7b00d-c4f7-4d20-bbb1-83d8363ee9b1",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CenterOnSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "4b111866-8fa6-4f15-88e1-4378b69ae542",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleFollowSelection",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "48bd6f9e-6679-4ce8-8460-cc9da479e04f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleFollowSelection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "89c1e1ed-97af-477f-be95-172256cccc9f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleFollowSelection",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "93eeb204-5ca5-4bef-8342-26904a55e622",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e88dc881-76c0-49ac-9b37-a09374777bcb",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoHome",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ed94656-48c9-4540-84c0-b3024ede6387",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoomScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23ed3c2a-f594-403e-8431-afe2d46f1c74",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97df829c-78a0-46bf-abdf-1d35a1f31919",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Despawn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}